src/frontend/ts/tests/fixtures/invalid_modifiers/poo.cloesce.ts
// @ts-nocheck
// InvalidAttributeModifier

@PlainOldObject
export class Foo {
  private a: number;
}
